parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM seen_program SEMICOLON programaopciones MAIN seen_main bloqueprincipal endproc
Rule 2     e -> <empty>
Rule 3     programaopciones -> opcionesdeclarar programaopciones
Rule 4     programaopciones -> e
Rule 5     opcionesdeclarar -> globalvars
Rule 6     opcionesdeclarar -> declarafuncion
Rule 7     declarafuncion -> tipofunc FUNC ID seen_funcion L_PARENTHESIS declaraparametros R_PARENTHESIS seen_dir_inicio bloqueprincipal endproc
Rule 8     tipofunc -> tipo
Rule 9     tipofunc -> VOID
Rule 10    globalvars -> GLOBAL seen_global variables
Rule 11    tipo -> INTEGER
Rule 12    tipo -> FLOAT
Rule 13    tipo -> STRING
Rule 14    tipo -> CHAR
Rule 15    tipo -> BOOLEAN
Rule 16    listaids -> ID seen_declara_variables esarr masids
Rule 17    esarr -> L_BRACKET INT R_BRACKET
Rule 18    esarr -> e
Rule 19    masids -> COMA listaids
Rule 20    masids -> e
Rule 21    declaraparametros -> tipo ID opcionesdp seen_paso2_def_proc listadp
Rule 22    declaraparametros -> e
Rule 23    opcionesdp -> L_BRACKET R_BRACKET
Rule 24    opcionesdp -> e
Rule 25    listadp -> COMA declaraparametros
Rule 26    listadp -> e
Rule 27    bloque -> L_BRACE listaestatutos R_BRACE
Rule 28    bloqueprincipal -> L_BRACE listaestatutosprincipal R_BRACE
Rule 29    listaestatutos -> estatuto listaestatutos
Rule 30    listaestatutos -> e
Rule 31    listaestatutosprincipal -> estatuto listaestatutosprincipal
Rule 32    listaestatutosprincipal -> variables listaestatutosprincipal
Rule 33    listaestatutosprincipal -> e
Rule 34    estatuto -> asignacion SEMICOLON
Rule 35    estatuto -> if
Rule 36    estatuto -> escritura
Rule 37    estatuto -> scan
Rule 38    estatuto -> ciclo
Rule 39    estatuto -> llamafunc
Rule 40    estatuto -> RETURN exp seen_return SEMICOLON
Rule 41    llamafunc -> ID seen_id_factor seen_llamada_func L_PARENTHESIS listargs R_PARENTHESIS seen_verifica_cant_args SEMICOLON gosub
Rule 42    asignacion -> ID opesarr EQUALS seen_equals castono equals_pendiente
Rule 43    opesarr -> L_BRACKET exp R_BRACKET
Rule 44    opesarr -> e
Rule 45    exp -> term paso5_cuadruplo opexp
Rule 46    term -> factor paso4_cuadruplo opterm
Rule 47    factor -> ID seen_id_factor opidfactor paso1_id_cuadruplo
Rule 48    factor -> INT paso1_int_cuadruplo
Rule 49    factor -> FLT paso1_float_cuadruplo
Rule 50    factor -> TRUE paso1_bool_cuadruplo
Rule 51    factor -> FALSE paso1_bool_cuadruplo
Rule 52    factor -> CHR paso1_char_cuadruplo
Rule 53    factor -> STRNG paso1_string_cuadruplo
Rule 54    factor -> L_PARENTHESIS paso6_cuadruplo condicion R_PARENTHESIS paso7_cuadruplo
Rule 55    opidfactor -> L_PARENTHESIS seen_llamada_func_factor listargs R_PARENTHESIS
Rule 56    opidfactor -> L_BRACKET exp R_BRACKET
Rule 57    opidfactor -> e
Rule 58    listargs -> condicion seen_argumento_funcion masargs
Rule 59    listargs -> e
Rule 60    masargs -> COMA listargs
Rule 61    masargs -> e
Rule 62    opterm -> MULTIPLY paso2y3_cuadruplos term
Rule 63    opterm -> DIVIDE paso2y3_cuadruplos term
Rule 64    opterm -> e
Rule 65    opexp -> PLUS paso2y3_cuadruplos exp
Rule 66    opexp -> MINUS paso2y3_cuadruplos exp
Rule 67    opexp -> e
Rule 68    castono -> castto L_PARENTHESIS exp R_PARENTHESIS
Rule 69    castono -> exp
Rule 70    castto -> STRING
Rule 71    castto -> CHAR
Rule 72    castto -> INTEGER
Rule 73    castto -> FLOAT
Rule 74    condicion -> exp_and if_paso3_cuadruplo listaor
Rule 75    listaor -> OR if_paso1_cuadruplo condicion
Rule 76    listaor -> e
Rule 77    exp_and -> opcnegar exp_bcomp if_paso8_cuadruplo if_paso4_cuadruplo listand
Rule 78    listand -> AND if_paso2_cuadruplo exp_and
Rule 79    listand -> e
Rule 80    exp_bcomp -> exp esComp
Rule 81    esComp -> bexpop if_paso6_cuadruplo exp if_paso7_cuadruplo
Rule 82    esComp -> e
Rule 83    opcnegar -> NOT if_paso5_cuadruplo
Rule 84    opcnegar -> e
Rule 85    bexpop -> L_THAN
Rule 86    bexpop -> G_THAN
Rule 87    bexpop -> EQUALS_C
Rule 88    bexpop -> DIFFERENT
Rule 89    bexpop -> LE_THAN
Rule 90    bexpop -> GE_THAN
Rule 91    escritura -> PRINT L_PARENTHESIS exp R_PARENTHESIS SEMICOLON seen_print
Rule 92    scan -> SCAN L_PARENTHESIS ID R_PARENTHESIS SEMICOLON seen_scan
Rule 93    variables -> tipo seen_tipo_var listaids SEMICOLON
Rule 94    ciclo -> while
Rule 95    ciclo -> dowhile
Rule 96    ciclo -> for
Rule 97    while -> WHILE while_paso1_codigo L_PARENTHESIS condicion while_paso2_codigo R_PARENTHESIS bloque while_paso3_codigo
Rule 98    dowhile -> DO while_paso1_codigo bloque WHILE L_PARENTHESIS condicion R_PARENTHESIS dowhile_paso4_codigo SEMICOLON
Rule 99    for -> FOR for_paso1_codigo L_PARENTHESIS condicion for_paso2_codigo SEMICOLON for_paso3_codigo increment for_paso4_codigo R_PARENTHESIS bloque for_paso5_codigo
Rule 100   increment -> asignacion listaincrement
Rule 101   listaincrement -> COMA increment
Rule 102   listaincrement -> e
Rule 103   if -> IF L_PARENTHESIS condicion if_paso1_codigo R_PARENTHESIS bloque listaelif else if_paso2_codigo
Rule 104   listaelif -> elif listaelif
Rule 105   listaelif -> e
Rule 106   elif -> ELIF L_PARENTHESIS condicion if_paso4_codigo R_PARENTHESIS bloque
Rule 107   else -> if_paso3_codigo ELSE bloque
Rule 108   else -> e
Rule 109   seen_main -> <empty>
Rule 110   seen_funcion -> <empty>
Rule 111   seen_paso2_def_proc -> <empty>
Rule 112   seen_global -> <empty>
Rule 113   seen_tipo_var -> <empty>
Rule 114   seen_declara_variables -> <empty>
Rule 115   seen_program -> <empty>
Rule 116   endproc -> <empty>
Rule 117   seen_return -> <empty>
Rule 118   seen_llamada_func -> <empty>
Rule 119   seen_llamada_func_factor -> <empty>
Rule 120   seen_argumento_funcion -> <empty>
Rule 121   seen_verifica_cant_args -> <empty>
Rule 122   gosub -> <empty>
Rule 123   seen_id_factor -> <empty>
Rule 124   seen_dir_inicio -> <empty>
Rule 125   paso1_id_cuadruplo -> <empty>
Rule 126   paso1_int_cuadruplo -> <empty>
Rule 127   paso1_float_cuadruplo -> <empty>
Rule 128   paso1_string_cuadruplo -> <empty>
Rule 129   paso1_char_cuadruplo -> <empty>
Rule 130   paso1_bool_cuadruplo -> <empty>
Rule 131   paso2y3_cuadruplos -> <empty>
Rule 132   paso4_cuadruplo -> <empty>
Rule 133   paso5_cuadruplo -> <empty>
Rule 134   paso6_cuadruplo -> <empty>
Rule 135   paso7_cuadruplo -> <empty>
Rule 136   if_paso1_cuadruplo -> <empty>
Rule 137   if_paso2_cuadruplo -> <empty>
Rule 138   if_paso3_cuadruplo -> <empty>
Rule 139   if_paso4_cuadruplo -> <empty>
Rule 140   if_paso5_cuadruplo -> <empty>
Rule 141   if_paso6_cuadruplo -> <empty>
Rule 142   if_paso7_cuadruplo -> <empty>
Rule 143   if_paso8_cuadruplo -> <empty>
Rule 144   seen_equals -> <empty>
Rule 145   equals_pendiente -> <empty>
Rule 146   seen_scan -> <empty>
Rule 147   seen_print -> <empty>
Rule 148   if_paso1_codigo -> <empty>
Rule 149   if_paso2_codigo -> <empty>
Rule 150   if_paso3_codigo -> <empty>
Rule 151   if_paso4_codigo -> <empty>
Rule 152   while_paso1_codigo -> <empty>
Rule 153   while_paso2_codigo -> <empty>
Rule 154   while_paso3_codigo -> <empty>
Rule 155   dowhile_paso4_codigo -> <empty>
Rule 156   for_paso1_codigo -> <empty>
Rule 157   for_paso2_codigo -> <empty>
Rule 158   for_paso3_codigo -> <empty>
Rule 159   for_paso4_codigo -> <empty>
Rule 160   for_paso5_codigo -> <empty>

Terminals, with rules where they appear

AND                  : 78
BOOLEAN              : 15
CHAR                 : 14 71
CHR                  : 52
COMA                 : 19 25 60 101
DIFFERENT            : 88
DIVIDE               : 63
DO                   : 98
ELIF                 : 106
ELSE                 : 107
EQUALS               : 42
EQUALS_C             : 87
FALSE                : 51
FLOAT                : 12 73
FLT                  : 49
FOR                  : 99
FUNC                 : 7
GE_THAN              : 90
GLOBAL               : 10
G_THAN               : 86
ID                   : 7 16 21 41 42 47 92
IF                   : 103
INT                  : 17 48
INTEGER              : 11 72
LE_THAN              : 89
L_BRACE              : 27 28
L_BRACKET            : 17 23 43 56
L_PARENTHESIS        : 7 41 54 55 68 91 92 97 98 99 103 106
L_THAN               : 85
MAIN                 : 1
MINUS                : 66
MULTIPLY             : 62
NOT                  : 83
OR                   : 75
PLUS                 : 65
PRINT                : 91
PROGRAM              : 1
RETURN               : 40
R_BRACE              : 27 28
R_BRACKET            : 17 23 43 56
R_PARENTHESIS        : 7 41 54 55 68 91 92 97 98 99 103 106
SCAN                 : 92
SEMICOLON            : 1 34 40 41 91 92 93 98 99
STRING               : 13 70
STRNG                : 53
TRUE                 : 50
VOID                 : 9
WHILE                : 97 98
error                : 

Nonterminals, with rules where they appear

asignacion           : 34 100
bexpop               : 81
bloque               : 97 98 99 103 106 107
bloqueprincipal      : 1 7
castono              : 42
castto               : 68
ciclo                : 38
condicion            : 54 58 75 97 98 99 103 106
declarafuncion       : 6
declaraparametros    : 7 25
dowhile              : 95
dowhile_paso4_codigo : 98
e                    : 4 18 20 22 24 26 30 33 44 57 59 61 64 67 76 79 82 84 102 105 108
elif                 : 104
else                 : 103
endproc              : 1 7
equals_pendiente     : 42
esComp               : 80
esarr                : 16
escritura            : 36
estatuto             : 29 31
exp                  : 40 43 56 65 66 68 69 80 81 91
exp_and              : 74 78
exp_bcomp            : 77
factor               : 46
for                  : 96
for_paso1_codigo     : 99
for_paso2_codigo     : 99
for_paso3_codigo     : 99
for_paso4_codigo     : 99
for_paso5_codigo     : 99
globalvars           : 5
gosub                : 41
if                   : 35
if_paso1_codigo      : 103
if_paso1_cuadruplo   : 75
if_paso2_codigo      : 103
if_paso2_cuadruplo   : 78
if_paso3_codigo      : 107
if_paso3_cuadruplo   : 74
if_paso4_codigo      : 106
if_paso4_cuadruplo   : 77
if_paso5_cuadruplo   : 83
if_paso6_cuadruplo   : 81
if_paso7_cuadruplo   : 81
if_paso8_cuadruplo   : 77
increment            : 99 101
listadp              : 21
listaelif            : 103 104
listaestatutos       : 27 29
listaestatutosprincipal : 28 31 32
listaids             : 19 93
listaincrement       : 100
listand              : 77
listaor              : 74
listargs             : 41 55 60
llamafunc            : 39
masargs              : 58
masids               : 16
opcionesdeclarar     : 3
opcionesdp           : 21
opcnegar             : 77
opesarr              : 42
opexp                : 45
opidfactor           : 47
opterm               : 46
paso1_bool_cuadruplo : 50 51
paso1_char_cuadruplo : 52
paso1_float_cuadruplo : 49
paso1_id_cuadruplo   : 47
paso1_int_cuadruplo  : 48
paso1_string_cuadruplo : 53
paso2y3_cuadruplos   : 62 63 65 66
paso4_cuadruplo      : 46
paso5_cuadruplo      : 45
paso6_cuadruplo      : 54
paso7_cuadruplo      : 54
program              : 0
programaopciones     : 1 3
scan                 : 37
seen_argumento_funcion : 58
seen_declara_variables : 16
seen_dir_inicio      : 7
seen_equals          : 42
seen_funcion         : 7
seen_global          : 10
seen_id_factor       : 41 47
seen_llamada_func    : 41
seen_llamada_func_factor : 55
seen_main            : 1
seen_paso2_def_proc  : 21
seen_print           : 91
seen_program         : 1
seen_return          : 40
seen_scan            : 92
seen_tipo_var        : 93
seen_verifica_cant_args : 41
term                 : 45 62 63
tipo                 : 8 21 93
tipofunc             : 7
variables            : 10 32
while                : 94
while_paso1_codigo   : 97 98
while_paso2_codigo   : 97
while_paso3_codigo   : 97

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM seen_program SEMICOLON programaopciones MAIN seen_main bloqueprincipal endproc

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . seen_program SEMICOLON programaopciones MAIN seen_main bloqueprincipal endproc
    (115) seen_program -> .

    SEMICOLON       reduce using rule 115 (seen_program -> .)

    seen_program                   shift and go to state 3

state 3

    (1) program -> PROGRAM seen_program . SEMICOLON programaopciones MAIN seen_main bloqueprincipal endproc

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM seen_program SEMICOLON . programaopciones MAIN seen_main bloqueprincipal endproc
    (3) programaopciones -> . opcionesdeclarar programaopciones
    (4) programaopciones -> . e
    (5) opcionesdeclarar -> . globalvars
    (6) opcionesdeclarar -> . declarafuncion
    (2) e -> .
    (10) globalvars -> . GLOBAL seen_global variables
    (7) declarafuncion -> . tipofunc FUNC ID seen_funcion L_PARENTHESIS declaraparametros R_PARENTHESIS seen_dir_inicio bloqueprincipal endproc
    (8) tipofunc -> . tipo
    (9) tipofunc -> . VOID
    (11) tipo -> . INTEGER
    (12) tipo -> . FLOAT
    (13) tipo -> . STRING
    (14) tipo -> . CHAR
    (15) tipo -> . BOOLEAN

    MAIN            reduce using rule 2 (e -> .)
    GLOBAL          shift and go to state 5
    VOID            shift and go to state 12
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 16
    STRING          shift and go to state 7
    CHAR            shift and go to state 6
    BOOLEAN         shift and go to state 17

    declarafuncion                 shift and go to state 8
    opcionesdeclarar               shift and go to state 13
    e                              shift and go to state 14
    tipo                           shift and go to state 15
    programaopciones               shift and go to state 9
    globalvars                     shift and go to state 10
    tipofunc                       shift and go to state 18

state 5

    (10) globalvars -> GLOBAL . seen_global variables
    (112) seen_global -> .

    INTEGER         reduce using rule 112 (seen_global -> .)
    FLOAT           reduce using rule 112 (seen_global -> .)
    STRING          reduce using rule 112 (seen_global -> .)
    CHAR            reduce using rule 112 (seen_global -> .)
    BOOLEAN         reduce using rule 112 (seen_global -> .)

    seen_global                    shift and go to state 19

state 6

    (14) tipo -> CHAR .

    ID              reduce using rule 14 (tipo -> CHAR .)
    FUNC            reduce using rule 14 (tipo -> CHAR .)


state 7

    (13) tipo -> STRING .

    ID              reduce using rule 13 (tipo -> STRING .)
    FUNC            reduce using rule 13 (tipo -> STRING .)


state 8

    (6) opcionesdeclarar -> declarafuncion .

    GLOBAL          reduce using rule 6 (opcionesdeclarar -> declarafuncion .)
    VOID            reduce using rule 6 (opcionesdeclarar -> declarafuncion .)
    INTEGER         reduce using rule 6 (opcionesdeclarar -> declarafuncion .)
    FLOAT           reduce using rule 6 (opcionesdeclarar -> declarafuncion .)
    STRING          reduce using rule 6 (opcionesdeclarar -> declarafuncion .)
    CHAR            reduce using rule 6 (opcionesdeclarar -> declarafuncion .)
    BOOLEAN         reduce using rule 6 (opcionesdeclarar -> declarafuncion .)
    MAIN            reduce using rule 6 (opcionesdeclarar -> declarafuncion .)


state 9

    (1) program -> PROGRAM seen_program SEMICOLON programaopciones . MAIN seen_main bloqueprincipal endproc

    MAIN            shift and go to state 20


state 10

    (5) opcionesdeclarar -> globalvars .

    GLOBAL          reduce using rule 5 (opcionesdeclarar -> globalvars .)
    VOID            reduce using rule 5 (opcionesdeclarar -> globalvars .)
    INTEGER         reduce using rule 5 (opcionesdeclarar -> globalvars .)
    FLOAT           reduce using rule 5 (opcionesdeclarar -> globalvars .)
    STRING          reduce using rule 5 (opcionesdeclarar -> globalvars .)
    CHAR            reduce using rule 5 (opcionesdeclarar -> globalvars .)
    BOOLEAN         reduce using rule 5 (opcionesdeclarar -> globalvars .)
    MAIN            reduce using rule 5 (opcionesdeclarar -> globalvars .)


state 11

    (11) tipo -> INTEGER .

    ID              reduce using rule 11 (tipo -> INTEGER .)
    FUNC            reduce using rule 11 (tipo -> INTEGER .)


state 12

    (9) tipofunc -> VOID .

    FUNC            reduce using rule 9 (tipofunc -> VOID .)


state 13

    (3) programaopciones -> opcionesdeclarar . programaopciones
    (3) programaopciones -> . opcionesdeclarar programaopciones
    (4) programaopciones -> . e
    (5) opcionesdeclarar -> . globalvars
    (6) opcionesdeclarar -> . declarafuncion
    (2) e -> .
    (10) globalvars -> . GLOBAL seen_global variables
    (7) declarafuncion -> . tipofunc FUNC ID seen_funcion L_PARENTHESIS declaraparametros R_PARENTHESIS seen_dir_inicio bloqueprincipal endproc
    (8) tipofunc -> . tipo
    (9) tipofunc -> . VOID
    (11) tipo -> . INTEGER
    (12) tipo -> . FLOAT
    (13) tipo -> . STRING
    (14) tipo -> . CHAR
    (15) tipo -> . BOOLEAN

    MAIN            reduce using rule 2 (e -> .)
    GLOBAL          shift and go to state 5
    VOID            shift and go to state 12
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 16
    STRING          shift and go to state 7
    CHAR            shift and go to state 6
    BOOLEAN         shift and go to state 17

    declarafuncion                 shift and go to state 8
    opcionesdeclarar               shift and go to state 13
    e                              shift and go to state 14
    tipo                           shift and go to state 15
    programaopciones               shift and go to state 21
    globalvars                     shift and go to state 10
    tipofunc                       shift and go to state 18

state 14

    (4) programaopciones -> e .

    MAIN            reduce using rule 4 (programaopciones -> e .)


state 15

    (8) tipofunc -> tipo .

    FUNC            reduce using rule 8 (tipofunc -> tipo .)


state 16

    (12) tipo -> FLOAT .

    ID              reduce using rule 12 (tipo -> FLOAT .)
    FUNC            reduce using rule 12 (tipo -> FLOAT .)


state 17

    (15) tipo -> BOOLEAN .

    ID              reduce using rule 15 (tipo -> BOOLEAN .)
    FUNC            reduce using rule 15 (tipo -> BOOLEAN .)


state 18

    (7) declarafuncion -> tipofunc . FUNC ID seen_funcion L_PARENTHESIS declaraparametros R_PARENTHESIS seen_dir_inicio bloqueprincipal endproc

    FUNC            shift and go to state 22


state 19

    (10) globalvars -> GLOBAL seen_global . variables
    (93) variables -> . tipo seen_tipo_var listaids SEMICOLON
    (11) tipo -> . INTEGER
    (12) tipo -> . FLOAT
    (13) tipo -> . STRING
    (14) tipo -> . CHAR
    (15) tipo -> . BOOLEAN

    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 16
    STRING          shift and go to state 7
    CHAR            shift and go to state 6
    BOOLEAN         shift and go to state 17

    variables                      shift and go to state 24
    tipo                           shift and go to state 23

state 20

    (1) program -> PROGRAM seen_program SEMICOLON programaopciones MAIN . seen_main bloqueprincipal endproc
    (109) seen_main -> .

    L_BRACE         reduce using rule 109 (seen_main -> .)

    seen_main                      shift and go to state 25

state 21

    (3) programaopciones -> opcionesdeclarar programaopciones .

    MAIN            reduce using rule 3 (programaopciones -> opcionesdeclarar programaopciones .)


state 22

    (7) declarafuncion -> tipofunc FUNC . ID seen_funcion L_PARENTHESIS declaraparametros R_PARENTHESIS seen_dir_inicio bloqueprincipal endproc

    ID              shift and go to state 26


state 23

    (93) variables -> tipo . seen_tipo_var listaids SEMICOLON
    (113) seen_tipo_var -> .

    ID              reduce using rule 113 (seen_tipo_var -> .)

    seen_tipo_var                  shift and go to state 27

state 24

    (10) globalvars -> GLOBAL seen_global variables .

    GLOBAL          reduce using rule 10 (globalvars -> GLOBAL seen_global variables .)
    VOID            reduce using rule 10 (globalvars -> GLOBAL seen_global variables .)
    INTEGER         reduce using rule 10 (globalvars -> GLOBAL seen_global variables .)
    FLOAT           reduce using rule 10 (globalvars -> GLOBAL seen_global variables .)
    STRING          reduce using rule 10 (globalvars -> GLOBAL seen_global variables .)
    CHAR            reduce using rule 10 (globalvars -> GLOBAL seen_global variables .)
    BOOLEAN         reduce using rule 10 (globalvars -> GLOBAL seen_global variables .)
    MAIN            reduce using rule 10 (globalvars -> GLOBAL seen_global variables .)


state 25

    (1) program -> PROGRAM seen_program SEMICOLON programaopciones MAIN seen_main . bloqueprincipal endproc
    (28) bloqueprincipal -> . L_BRACE listaestatutosprincipal R_BRACE

    L_BRACE         shift and go to state 29

    bloqueprincipal                shift and go to state 28

state 26

    (7) declarafuncion -> tipofunc FUNC ID . seen_funcion L_PARENTHESIS declaraparametros R_PARENTHESIS seen_dir_inicio bloqueprincipal endproc
    (110) seen_funcion -> .

    L_PARENTHESIS   reduce using rule 110 (seen_funcion -> .)

    seen_funcion                   shift and go to state 30

state 27

    (93) variables -> tipo seen_tipo_var . listaids SEMICOLON
    (16) listaids -> . ID seen_declara_variables esarr masids

    ID              shift and go to state 32

    listaids                       shift and go to state 31

state 28

    (1) program -> PROGRAM seen_program SEMICOLON programaopciones MAIN seen_main bloqueprincipal . endproc
    (116) endproc -> .

    $end            reduce using rule 116 (endproc -> .)

    endproc                        shift and go to state 33

state 29

    (28) bloqueprincipal -> L_BRACE . listaestatutosprincipal R_BRACE
    (31) listaestatutosprincipal -> . estatuto listaestatutosprincipal
    (32) listaestatutosprincipal -> . variables listaestatutosprincipal
    (33) listaestatutosprincipal -> . e
    (34) estatuto -> . asignacion SEMICOLON
    (35) estatuto -> . if
    (36) estatuto -> . escritura
    (37) estatuto -> . scan
    (38) estatuto -> . ciclo
    (39) estatuto -> . llamafunc
    (40) estatuto -> . RETURN exp seen_return SEMICOLON
    (93) variables -> . tipo seen_tipo_var listaids SEMICOLON
    (2) e -> .
    (42) asignacion -> . ID opesarr EQUALS seen_equals castono equals_pendiente
    (103) if -> . IF L_PARENTHESIS condicion if_paso1_codigo R_PARENTHESIS bloque listaelif else if_paso2_codigo
    (91) escritura -> . PRINT L_PARENTHESIS exp R_PARENTHESIS SEMICOLON seen_print
    (92) scan -> . SCAN L_PARENTHESIS ID R_PARENTHESIS SEMICOLON seen_scan
    (94) ciclo -> . while
    (95) ciclo -> . dowhile
    (96) ciclo -> . for
    (41) llamafunc -> . ID seen_id_factor seen_llamada_func L_PARENTHESIS listargs R_PARENTHESIS seen_verifica_cant_args SEMICOLON gosub
    (11) tipo -> . INTEGER
    (12) tipo -> . FLOAT
    (13) tipo -> . STRING
    (14) tipo -> . CHAR
    (15) tipo -> . BOOLEAN
    (97) while -> . WHILE while_paso1_codigo L_PARENTHESIS condicion while_paso2_codigo R_PARENTHESIS bloque while_paso3_codigo
    (98) dowhile -> . DO while_paso1_codigo bloque WHILE L_PARENTHESIS condicion R_PARENTHESIS dowhile_paso4_codigo SEMICOLON
    (99) for -> . FOR for_paso1_codigo L_PARENTHESIS condicion for_paso2_codigo SEMICOLON for_paso3_codigo increment for_paso4_codigo R_PARENTHESIS bloque for_paso5_codigo

    RETURN          shift and go to state 35
    R_BRACE         reduce using rule 2 (e -> .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 39
    SCAN            shift and go to state 48
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 16
    STRING          shift and go to state 7
    CHAR            shift and go to state 6
    BOOLEAN         shift and go to state 17
    WHILE           shift and go to state 38
    DO              shift and go to state 34
    FOR             shift and go to state 49

    scan                           shift and go to state 36
    variables                      shift and go to state 37
    if                             shift and go to state 40
    listaestatutosprincipal        shift and go to state 41
    ciclo                          shift and go to state 42
    tipo                           shift and go to state 23
    llamafunc                      shift and go to state 43
    estatuto                       shift and go to state 44
    dowhile                        shift and go to state 47
    e                              shift and go to state 52
    for                            shift and go to state 46
    asignacion                     shift and go to state 53
    while                          shift and go to state 45
    escritura                      shift and go to state 54

state 30

    (7) declarafuncion -> tipofunc FUNC ID seen_funcion . L_PARENTHESIS declaraparametros R_PARENTHESIS seen_dir_inicio bloqueprincipal endproc

    L_PARENTHESIS   shift and go to state 55


state 31

    (93) variables -> tipo seen_tipo_var listaids . SEMICOLON

    SEMICOLON       shift and go to state 56


state 32

    (16) listaids -> ID . seen_declara_variables esarr masids
    (114) seen_declara_variables -> .

    L_BRACKET       reduce using rule 114 (seen_declara_variables -> .)
    COMA            reduce using rule 114 (seen_declara_variables -> .)
    SEMICOLON       reduce using rule 114 (seen_declara_variables -> .)

    seen_declara_variables         shift and go to state 57

state 33

    (1) program -> PROGRAM seen_program SEMICOLON programaopciones MAIN seen_main bloqueprincipal endproc .

    $end            reduce using rule 1 (program -> PROGRAM seen_program SEMICOLON programaopciones MAIN seen_main bloqueprincipal endproc .)


state 34

    (98) dowhile -> DO . while_paso1_codigo bloque WHILE L_PARENTHESIS condicion R_PARENTHESIS dowhile_paso4_codigo SEMICOLON
    (152) while_paso1_codigo -> .

    L_BRACE         reduce using rule 152 (while_paso1_codigo -> .)

    while_paso1_codigo             shift and go to state 58

state 35

    (40) estatuto -> RETURN . exp seen_return SEMICOLON
    (45) exp -> . term paso5_cuadruplo opexp
    (46) term -> . factor paso4_cuadruplo opterm
    (47) factor -> . ID seen_id_factor opidfactor paso1_id_cuadruplo
    (48) factor -> . INT paso1_int_cuadruplo
    (49) factor -> . FLT paso1_float_cuadruplo
    (50) factor -> . TRUE paso1_bool_cuadruplo
    (51) factor -> . FALSE paso1_bool_cuadruplo
    (52) factor -> . CHR paso1_char_cuadruplo
    (53) factor -> . STRNG paso1_string_cuadruplo
    (54) factor -> . L_PARENTHESIS paso6_cuadruplo condicion R_PARENTHESIS paso7_cuadruplo

    ID              shift and go to state 64
    INT             shift and go to state 68
    FLT             shift and go to state 59
    TRUE            shift and go to state 60
    FALSE           shift and go to state 66
    CHR             shift and go to state 63
    STRNG           shift and go to state 67
    L_PARENTHESIS   shift and go to state 62

    term                           shift and go to state 65
    exp                            shift and go to state 69
    factor                         shift and go to state 61

state 36

    (37) estatuto -> scan .

    RETURN          reduce using rule 37 (estatuto -> scan .)
    ID              reduce using rule 37 (estatuto -> scan .)
    IF              reduce using rule 37 (estatuto -> scan .)
    PRINT           reduce using rule 37 (estatuto -> scan .)
    SCAN            reduce using rule 37 (estatuto -> scan .)
    INTEGER         reduce using rule 37 (estatuto -> scan .)
    FLOAT           reduce using rule 37 (estatuto -> scan .)
    STRING          reduce using rule 37 (estatuto -> scan .)
    CHAR            reduce using rule 37 (estatuto -> scan .)
    BOOLEAN         reduce using rule 37 (estatuto -> scan .)
    WHILE           reduce using rule 37 (estatuto -> scan .)
    DO              reduce using rule 37 (estatuto -> scan .)
    FOR             reduce using rule 37 (estatuto -> scan .)
    R_BRACE         reduce using rule 37 (estatuto -> scan .)


state 37

    (32) listaestatutosprincipal -> variables . listaestatutosprincipal
    (31) listaestatutosprincipal -> . estatuto listaestatutosprincipal
    (32) listaestatutosprincipal -> . variables listaestatutosprincipal
    (33) listaestatutosprincipal -> . e
    (34) estatuto -> . asignacion SEMICOLON
    (35) estatuto -> . if
    (36) estatuto -> . escritura
    (37) estatuto -> . scan
    (38) estatuto -> . ciclo
    (39) estatuto -> . llamafunc
    (40) estatuto -> . RETURN exp seen_return SEMICOLON
    (93) variables -> . tipo seen_tipo_var listaids SEMICOLON
    (2) e -> .
    (42) asignacion -> . ID opesarr EQUALS seen_equals castono equals_pendiente
    (103) if -> . IF L_PARENTHESIS condicion if_paso1_codigo R_PARENTHESIS bloque listaelif else if_paso2_codigo
    (91) escritura -> . PRINT L_PARENTHESIS exp R_PARENTHESIS SEMICOLON seen_print
    (92) scan -> . SCAN L_PARENTHESIS ID R_PARENTHESIS SEMICOLON seen_scan
    (94) ciclo -> . while
    (95) ciclo -> . dowhile
    (96) ciclo -> . for
    (41) llamafunc -> . ID seen_id_factor seen_llamada_func L_PARENTHESIS listargs R_PARENTHESIS seen_verifica_cant_args SEMICOLON gosub
    (11) tipo -> . INTEGER
    (12) tipo -> . FLOAT
    (13) tipo -> . STRING
    (14) tipo -> . CHAR
    (15) tipo -> . BOOLEAN
    (97) while -> . WHILE while_paso1_codigo L_PARENTHESIS condicion while_paso2_codigo R_PARENTHESIS bloque while_paso3_codigo
    (98) dowhile -> . DO while_paso1_codigo bloque WHILE L_PARENTHESIS condicion R_PARENTHESIS dowhile_paso4_codigo SEMICOLON
    (99) for -> . FOR for_paso1_codigo L_PARENTHESIS condicion for_paso2_codigo SEMICOLON for_paso3_codigo increment for_paso4_codigo R_PARENTHESIS bloque for_paso5_codigo

    RETURN          shift and go to state 35
    R_BRACE         reduce using rule 2 (e -> .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 39
    SCAN            shift and go to state 48
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 16
    STRING          shift and go to state 7
    CHAR            shift and go to state 6
    BOOLEAN         shift and go to state 17
    WHILE           shift and go to state 38
    DO              shift and go to state 34
    FOR             shift and go to state 49

    scan                           shift and go to state 36
    variables                      shift and go to state 37
    if                             shift and go to state 40
    listaestatutosprincipal        shift and go to state 70
    ciclo                          shift and go to state 42
    tipo                           shift and go to state 23
    llamafunc                      shift and go to state 43
    estatuto                       shift and go to state 44
    dowhile                        shift and go to state 47
    e                              shift and go to state 52
    for                            shift and go to state 46
    asignacion                     shift and go to state 53
    while                          shift and go to state 45
    escritura                      shift and go to state 54

state 38

    (97) while -> WHILE . while_paso1_codigo L_PARENTHESIS condicion while_paso2_codigo R_PARENTHESIS bloque while_paso3_codigo
    (152) while_paso1_codigo -> .

    L_PARENTHESIS   reduce using rule 152 (while_paso1_codigo -> .)

    while_paso1_codigo             shift and go to state 71

state 39

    (91) escritura -> PRINT . L_PARENTHESIS exp R_PARENTHESIS SEMICOLON seen_print

    L_PARENTHESIS   shift and go to state 72


state 40

    (35) estatuto -> if .
